added initial client functionality to frontend w/ corresponding changes to backend
